# iracing-pace

./: .gitignore  README.md  pyproject.toml  results.py
iracing_pace/: config.py.example  credentials.py  lapswarm.py  main.py
iracing_pace/gui/src/main/python/: main.py
tests/: test_iracing_pace.py
