[tool.poetry]
name = "iracing-pace"
version = "0.1.0"
description = ""
authors = ["scullionw <scuw1801@usherbrooke.ca>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.0"
seaborn = "^0.9.0"
nuitka = "^0.6.5"
numpy = "1.16.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
