[tool.poetry]
name = "iracing-pace"
version = "0.1.0"
description = ""
authors = ["scullionw <scuw1801@usherbrooke.ca>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25.0"
seaborn = "^0.9.0"
iracing-web-api = { git = "https://github.com/scullionw/iracing-web-api.git" }
keyring = "^19.0"
# For freezing
fbs = "^0.8.3"
PyQt5 = "=5.9.2"
sip = "^4.19"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4"
pypiwin32 = "^223.0"
# To fix freezing incompatibility with 1.17.0
numpy = "=1.16.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
